- If more than about six entries in Protocol Parameters panel of Device Editor screen, make them scroll to limit maximum height of editor (Graham)
- Fix permissions for DecodeIR.html and DecodeIR_ChangeLog.txt (Greg)
- Make JP1 Parallel the last available interface (Greg)
- Update Digit Maps through 520 (Greg)

Changes for v2.01
-- Alpha --
- Fix NullPointerException when editing DeviceCombiner protocol (Graham)
- Implement upgrade overflow into learned signal and advanced code regions (Graham)
- When loading a KM file with a protocol named "Manual Settings", append the PID to the name to prevent mis-identification if there is a similar subsequent load (Graham)
- Fix bug causing button restrictions set by the Button class constructor to be overridden, rather than supplemented, by explicitly set restrictions (Graham)
- Fix bug preventing KeyMove setup code values > 2047 from being correctly imported when loading a .ir file (Graham)
- Implement highlighting (Graham)
-- Alpha 2 --
- Create File/Set Directory menu and implement entries to change RDF Path and Image Path (Graham)
- Use JDirectoryChooser instead of JFileChooser when there are no RDF/Map files found on opening RemoteMaster (Graham)
- Use JDirectoryChooser instead of JFileChooser in Options/Folders menu of KeyMapMaster (Graham)
- Make highlighting an option, defaulting to off (Graham)
-- Alpha 3 --
- Create Advanced menu, add items Clean Upper Memory, Initialize to $00 and Initialize to $FF and implement them (Graham)
- Add ExtInstall.jar as a referenced library and update build.xml to include it (Graham)
- Add Install Extender item to File menu and implement it using procedures from ExtInstall.jar (Graham)
-- Alpha 4 --
- Clean up compiler warnings (Greg)
- Enable correct copy'n'paste from IE (Greg)
-- Alpha 5 --
- On importing .ir file, treat invalid digit maps index as absent, to prevent RMIR crashing (Graham)